# Mavro-Keyboard

./: .gitignore  Makefile  README.md
Resources/: AppIcon.icns  Info.plist  Mavro.entitlements
Resources/data/: autocorrect.json
Sources/: AppDelegate.swift  BridgeHeader.h  CandidatePanel.swift  HotKeyManager.swift  InputMode.swift  MavroInputController.swift  ModeHUD.swift  StatusMenu.swift  ToolWindowCoordinator.swift  main.swift
Sources/Tools/: CharacterMap.swift  Converter.swift
assets/fonts/: FONTS-NOTICE.txt
engine/: Cargo.toml
engine/include/: mavro_engine.h
engine/src/: bijoy_table.json  lib.rs
engine/tests/: engine_test.c
installer/: Install Mavro.command  ReadMe.txt
scripts/: build.sh  create_dmg.sh  install.sh  test_engine.sh  uninstall.sh
